--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
-  <title>Quiz</title>
+  <title>Quiz App</title>
 </head>
 
 <body>
-  <div class="quizboard">
-    <div id="questions">
-      <form id="quiz">
-        <h2 id="quest">Questions</h2>
-
-        <input type="radio" name="ans" id="a" class="answer">
-        <label for="a" id="answer_a">Question</label><br>
-        <input type="radio" name="ans" id="b" class="answer">
-        <label for="b" id="answer_b">Question</label><br>
-        <input type="radio" name="ans" id="c" class="answer">
-        <label for="c" id="answer_c">Question</label><br>
-        <input type="radio" name="ans" id="d" class="answer">
-        <label for="d" id="answer_d">Question</label><br>
-
-        <button type="submit" id="submit"><span>Submit</span><i></i></button>
-      </form>
+  <div class="container">
+    <div id="questions-container" class="hide"></div>
+    <div id="question">Question</div>
+    <div id="answerBtns" class="ans-grid">
+      <button class="btn">Answer 1</button>
+      <button class="btn">Answer 1</button>
+      <button class="btn">Answer 1</button>
+      <button class="btn">Answer 1</button>
+    </div>
+    <div class="controls">
+      <button id="startBtn" class="startBtn btn">Start</button>
+      <button id="nextBtn" class="nextBtn btn hide">Next</button>
     </div>
   </div>
+
+
+  <script src="./assets/js/script.js" defer></script>
 
 </body>
 
