--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
+  <script src="./assets/js/script.js" defer></script>
   <title>Quiz App</title>
 </head>
 
 <body>
+
+  <!-- question format container  -->
   <div class="container">
-    <div id="questions-container" class="hide"></div>
-    <div id="question">Question</div>
-    <div id="answerBtns" class="ans-grid">
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 1</button>
-      <button class="btn">Answer 1</button>
+    <div id="questions-container" class="hide">
+      <div id="question">Question</div>
+      <div id="answerBtns" class="ans-grid">
+        <button class="btn">Answer 1</button>
+        <button class="btn">Answer 2</button>
+        <button class="btn">Answer 3</button>
+        <button class="btn">Answer 4</button>
+      </div>
     </div>
+
+    <!-- app controls  -->
     <div class="controls">
       <button id="startBtn" class="startBtn btn">Start</button>
       <button id="nextBtn" class="nextBtn btn hide">Next</button>
@@ -26,7 +32,7 @@
   </div>
 
 
-  <script src="./assets/js/script.js" defer></script>
+
 
 </body>
 
